--- a/src/components/Color.stories.mdx
+++ b/src/components/Color.stories.mdx
@@ -8,6 +8,11 @@ import { theme } from "../theme";
 
 <ColorPalette>
   <ColorItem
+    title="Background"
+    subtitle="theme.brand.default"
+    colors={[theme.ui.background]}
+  />
+  <ColorItem
     title="Indigo"
     subtitle="theme.brand.default"
     colors={[theme.brand.default]}
@@ -28,10 +33,7 @@ import { theme } from "../theme";
   />
   <ColorItem
     title="Cool Grey"
-    subtitle="theme.neutral.four"
-    colors={[theme.neutral.four]}
-  />
-  <ColorItem
+    subtitle="theme.neutral"
     colors={[
       theme.neutral.one,
       theme.neutral.two,
