--- a/src/components/Color.stories.mdx
+++ b/src/components/Color.stories.mdx
@@ -1,17 +1,12 @@
 import { Meta, ColorPalette, ColorItem } from "@storybook/addon-docs/blocks";
 
-import { theme } from "../theme";
+import { theme } from "../shared/theme";
 
-<Meta title="Design System/Colors" />
+<Meta title="Design System|Colors" />
 
 # Colors
 
 <ColorPalette>
-  <ColorItem
-    title="Background"
-    subtitle="theme.brand.default"
-    colors={[theme.ui.background]}
-  />
   <ColorItem
     title="Indigo"
     subtitle="theme.brand.default"
