fixed files colors

--- a/src/components/Button/Button.stories.mdx
+++ b/src/components/Button/Button.stories.mdx
@@ -3,7 +3,7 @@ import { Primary, Secondary } from "./";
 
 import { theme } from "../../shared/theme";
 
-<Meta title="Design System|Colors" />
+<Meta title="Design System|Buttons" />
 
 # Button
 
